# bidimensional

./: .gitignore  Cargo.toml  README.md
doc/: search-index.js  settings.html  source-files.js
doc/lib/: all.html  index.html
doc/src/lib/: lib.rs.html
doc/src/lib/coordinates/: coordinate.rs.html  gen_coordinate.rs.html  mod.rs.html  safe_coordinate.rs.html  unsafe_coordinate.rs.html
src/: lib.rs  main.rs  safe_coordinate.rs  unsafe_coordinate.rs
src/coordinate/: TODO  TODO-Future  coordinate.rs  f32_inmut_coordinate.rs  f32_mut_coordinate.rs  mod.rs  safe_coordinate.rs  traits_coordinate.rs  unsafe_coordinate.rs
src/coordinates/: TODO  coordinate.rs  gen_coordinate.rs  generic_coord_record.self  mod.rs  phantomCoordinate.rs  safe_coordinate.rs  unsafe_coordinate.rs
src/graphs/: adjancecy_list.rs  mod.rs  polygon_unit.rs  vec_struct.rs
src/polygon/: inmut_polygon.rs  mod.rs  mut_polygon.rs  polygon.rs
src/polygon/triangle/: circumcircle.rs  mod.rs  triangle.rs
