[package]
name = "bidimensional"
version = "0.3.1"
edition = "2021"
authors=["Talleyrand-34 <talleyrand-34@tutanota.com>"]
description="A collection of 2D utilities for coordinate representation and manipulation"
license="AGPL-3.0-or-later"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
doc = "0.0.0"

